--- a/home.html
+++ b/home.html
@@ -12,5 +12,6 @@
 <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="home.js"></script>
 </body>
 </html>
