--- a/home.html
+++ b/home.html
@@ -4,13 +4,182 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins|Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="pricing.css">
 </head>
 
 <body>
+	<!-- header -->
+	<div class="header-area">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
 
+					<nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
+						<a class="navbar-brand" style="color: black;" href="#"><img src="img/logo.png"></a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse"
+							data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+							aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav ml-auto"
+								style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+								<li class="nav-item">
+									<a class="nav-link" style="color: whitesmoke;" href="#">Home</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" style="color: whitesmoke;" href="#">About</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" style="color: whitesmoke;" href="#">Pricing</a>
+								</li>
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" style="color: whitesmoke;" href="#"
+										id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+										aria-expanded="false">
+										Pages
+									</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="#">Action</a>
+										<a class="dropdown-item" href="#">Another action</a>
+										<div class="dropdown-divider"></div>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</div>
+								</li>
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" style="color: whitesmoke;" href="#"
+										id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+										aria-expanded="false">
+										Blog
+									</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="#">Action</a>
+										<a class="dropdown-item" href="#">Another action</a>
+										<div class="dropdown-divider"></div>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</div>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" style="color: whitesmoke;" href="#">Contact</a>
+								</li>
+							</ul>
+						</div>
+					</nav>
 
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Banner -->
+	<section class="banner-area">
+		<div class="container">
+			<div class="row banner-content">
+				<div class="col-lg-12 d-flex align-items-center justify-content-between banner-isi">
+					<div class="left-part">
+						<h1>
+							<b> Pricing Plans</b>
+						</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor
+							incididunt
+							ut labore et dolore
+							magna aliqua.
+						</p>
+					</div>
+					<div class="right-part">
+						<a href="index.html">pricing</a>
+						<span class="fa fa-caret-right"></span>
+						<a href="pricing.html">home</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+	</section>
+
+	<!-- Pricing Plan -->
+	<div class="pricing-plan">
+		<div class="container">
+			<div class="row d-flex justify-content-center mt-5">
+				<div class="col-lg-6">
+					<div class="section-title text-center">
+						<h2>Suitable Pricing Plans</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+							labore et dolore
+							magna aliqua.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6 mt-5 mb-5">
+					<div class="card">
+						<div class="card-header d-flex justify-content-between">
+							<div class="top-left">
+								<h4><b> Standard</b></h4>
+								<p>For the individuals </p>
+							</div>
+							<div class="top-right">
+								<h1>£199</h1>
+							</div>
+						</div>
+						<div class="card-body text-center mt-5">
+							<p>2.5 GB Free Photos</p>
+							<p>Secure Online Transfer Indeed</p>
+							<p>Unlimited Styles for interface</p>
+							<p>Reliable Customer Service</p>
+							<p>Manual Backup Provided</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 mt-5 mb-5">
+					<div class="card">
+						<div class="card-header d-flex justify-content-between">
+							<div class="top-left">
+								<h4><b> Bussines</b></h4>
+								<p>For small Company </p>
+							</div>
+							<div class="top-right">
+								<h1>£399</h1>
+							</div>
+						</div>
+						<div class="card-body text-center mt-5">
+							<p>2.5 GB Free Photos</p>
+							<p>Secure Online Transfer Indeed</p>
+							<p>Unlimited Styles for interface</p>
+							<p>Reliable Customer Service</p>
+							<p>Manual Backup Provided</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 mt-5 mb-5">
+					<div class="card">
+						<div class="card-header d-flex justify-content-between">
+							<div class="top-left">
+								<h4><b> Ultimate</b></h4>
+								<p>For large Company</p>
+							</div>
+							<div class="top-right">
+								<h1>£499</h1>
+							</div>
+						</div>
+						<div class="card-body text-center mt-5">
+							<p>2.5 GB Free Photos</p>
+							<p>Secure Online Transfer Indeed</p>
+							<p>Unlimited Styles for interface</p>
+							<p>Reliable Customer Service</p>
+							<p>Manual Backup Provided</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- About Area -->
 
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
