create about area, footer & scrool up

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 
-					<nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
+					<nav class="navbar navbar-expand-lg navbar-light fixed-top">
 						<a class="navbar-brand" style="color: black;" href="#"><img src="img/logo.png"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse"
 							data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -180,6 +180,162 @@
 	</div>
 
 	<!-- About Area -->
+	<section class="about-area">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-lg-6 home-about-right home-about-right2">
+					<h1>
+						We Believe that <br>
+						Interior beautifies the <br>
+						Total Architecture
+					</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+						labore et dolore
+						magna aliqua.Ut
+						enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
+					</p>
+					<div class="download-button d-flex flex-row justify-content-start">
+						<div class="buttons flex-row d-flex">
+							<i class="fa fa-apple text-center" aria-hidden="true"></i>
+							<div class="desc">
+								<a href="#">
+									<p class="text-center">
+										<b> Available</b>
+									</p>
+									<h5>on App Store</h5>
+								</a>
+							</div>
+						</div>
+						<div class="buttons-android dark flex-row d-flex">
+							<i class="fa fa-android" aria-hidden="true"></i>
+							<div class="desc">
+								<a href="#">
+									<p>
+										Available
+									</p>
+									<h5>on Play Store</h5>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-5 home-about-left">
+					<img class="img-fluid" src="img/iphone.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<div class="container-fluid" id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-6 col-sm-2">
+					<br>
+					<p>
+						<h6>Top Products</h6>
+					</p>
+					<p class="text-muted">Managed Website</p>
+					<p class="text-muted">Manage Reputation</p>
+					<p class="text-muted">Power Tools</p>
+					<p class="text-muted">Marketing Service</p>
+				</div>
+				<div class="col-6 col-sm-2">
+					<br>
+					<p>
+						<h6>Quick Links</h6>
+					</p>
+					<p class="text-muted">Jobs</p>
+					<p class="text-muted">Brand Assets</p>
+					<p class="text-muted">Investor Relations</p>
+					<p class="text-muted">Terms of Service</p>
+				</div>
+				<div class="col-6 col-sm-2">
+					<br>
+					<p>
+						<h6>Features</h6>
+					</p>
+					<p class="text-muted">Jobs</p>
+					<p class="text-muted">Brand Assets</p>
+					<p class="text-muted">Investor Relations</p>
+					<p class="text-muted">Terms of Service</p>
+				</div>
+				<div class="col-6 col-sm-2">
+					<br>
+					<p>
+						<h6>Resources</h6>
+					</p>
+					<p class="text-muted">Guides</p>
+					<p class="text-muted">Research</p>
+					<p class="text-muted">Expert</p>
+					<p class="text-muted">Agencies</p>
+				</div>
+				<div class="col-12 col-sm-4">
+					<br>
+					<p>
+						<h6>Newsletter</h6>
+					</p>
+					<p class="text-muted">You can trust us, we only send promo offers.</p>
+					<div class="form-inline">
+						<div class="input-group mb-2 mr-sm-2">
+							<div class="input-group-prepend">
+								<input type="text" class="form-control" placeholder="Your email address">
+							</div>
+							<div class="input-group-text color: bg-primary" style="color: white;">&#8594;</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row" id="footer2">
+				<div class="col-sm-7">
+					<span>Copyright &copy;2020 All rights reserved | This templete is made with <i
+							class="fa fa-heart"></i> by</span>
+					<span style="color: cornflowerblue;">Colorlib</span>
+				</div>
+				<div class="col-sm-5">
+					<div class="row">
+						<div class="col-6 col-sm-6">
+							<!-- <img src="img/app-store.png" class="img-fluid"> -->
+							<div class="buttons-footer flex-row d-flex">
+								<i class="fa fa-apple text-center" aria-hidden="true"></i>
+								<div class="desc">
+									<a href="#">
+										<p class="text-center">
+											<b> Available</b>
+										</p>
+										<h5>on App Store</h5>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-6">
+							<!-- <img src="img/app-store2.jpg" class="img-fluid"> -->
+							<div class="buttons-footer dark flex-row d-flex">
+								<i class="fa fa-android" aria-hidden="true"></i>
+								<div class="desc">
+									<a href="#">
+										<p>
+											<b>Available</b>
+										</p>
+										<h5>on Play Store</h5>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><br>
+	</div>
+
+	<!-- Scrool Up -->
+	<a href="#top" id="top-nav">
+		<img src="img/scroll.png" alt="top">
+	</a>
 
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
