--- a/contact.html
+++ b/contact.html
@@ -161,9 +161,13 @@
 		</div><br>
 	</div>
 
+	<a href="#top" id="top-nav">
+		<img src="img/scroll.jpeg" alt="top">
+	</a>
+
 <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="home.js"></script>
+<script type="text/javascript" src="contact.js"></script>
 </body>
 </html>
